# Alice-Client

./: CMakeLists.txt  Client.cpp  Client.h  KClient.cpp  KClient.h  KClientT1V1.cpp  KClientT1V1.h  KClientT1V2.cpp  KClientT1V2.h  KClientT1V3.cpp  KClientT1V3.h  KClientT2V1.cpp  KClientT2V1.h  KClientT2V2.cpp  KClientT2V2.h  KClientT2V3.cpp  KClientT2V3.h  KClientV1.cpp  KClientV1.h  KClientV2.cpp  KClientV2.h  KClientV3.cpp  KClientV3.h  SerializeObjects.cpp  SerializeObjects.h  clientfhesiutils.cpp  clientfhesiutils.h  main.cpp
old_techniques/: CMakeLists.txt  KClient.cpp  KClient.h  KClientV1.cpp  KClientV2.cpp  KClientV2.h  KClientV3.cpp  main.cpp
script/: datagenerator.py
