cmake_minimum_required(VERSION 3.8)
project(KClient)

set(CMAKE_CXX_STANDARD 11)
include_directories(/usr/local/include/FHESI)
include_directories(/usr/local/include/NTL)
#set(SOURCE_FILES main.cpp clientfhesiutils.cpp clientfhesiutils.h KClientT1V1.h KClientT1V1.cpp)
#set(SOURCE_FILES main.cpp clientfhesiutils.cpp clientfhesiutils.h KClientT1V2.h KClientT1V2.cpp)
#set(SOURCE_FILES main.cpp clientfhesiutils.cpp clientfhesiutils.h KClientT1V3.h KClientT1V3.cpp)
#set(SOURCE_FILES main.cpp clientfhesiutils.cpp clientfhesiutils.h KClientT2V1.h KClientT2V1.cpp)
set(SOURCE_FILES main.cpp clientfhesiutils.cpp clientfhesiutils.h KClientT2V2.h KClientT2V2.cpp)
#set(SOURCE_FILES main.cpp clientfhesiutils.cpp clientfhesiutils.h KClientT2V3.h KClientT2V3.cpp)

add_executable(KClient ${SOURCE_FILES})
target_link_libraries(KClient libfhesi.a libntl.a libgmp.a libm.a)